[package]
name = "redis-mod-timer-rs"
version = "0.1.0"
authors = ["yutapok <yutautsugi@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "1.0"
libc = "0.2.0"
time = "0.1"
crontab = "0.2.0"

[build-dependencies]
cc = "1.0"

[dependencies.redis_mod]
git = "https://github.com/yutapok/redis-mod-rs.git"
